--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-salaiset kansiot
-päivitetään tätäkin
+Alkuperäinen koodi on lähes kokonaan poistettu, tehtävänanto ei ollut alussa minulle aivan selkeä.
+
+Käytetyt kuvat ja lähdeosoitteet:(käytetty pelkästään public domain -kuvia)
+1. Louis XIV of France (Taideteos, Hyacinthe Rigaud noin vuonna 1701, Wikipedia hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Ludvig_XIV
+2. Abraham Lincoln (Valokuva, Alexander Gardner 1863, Wikipedia hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Abraham_Lincoln
+3. Nelson Mandela (Public domain pictures, hakupäivä 11.5.2022) https://www.publicdomainpictures.net/en/view-image.php?image=18473&picture=nelson-mandela
+4. Marie Curie (Valokuva, noin vuonna 1898, Wikipedia hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Marie_Curie original http://www.mlahanas.de/Physics/Bios/MarieCurie.html
+5. Amelia Earhart (Valokuva 1937, National Portrait Gallery, Smithsonian Institution; gift of George R. Rinhart, in memory of Joan Rinhart. Hakupäivä 10.5.2022, Wikipedia) 
+https://en.wikipedia.org/wiki/Amelia_Earhart original http://amextbg2.wgbhdigital.org/wgbh/americanexperience/media/uploads/special_features/photo_gallery/amelia_gallery_07.jpg
+6. Pyramidit (Valokuva, Pixabay  hakupäivä 11.5.2022)https://pixabay.com/fi/photos/pyramidit-egypti-egyptil%c3%a4inen-2371501/
+
+7. Valtionhotelli, Imatra (Valokuva, Pixabay, hakupäivä 11.5.2022) https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/
+8. Madame de Pompadour (Taideteos, Francois Boucher 1756, Wikipedia hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Madame_de_Pompadour
+9. Leonardo da Vincin piirros Arnon laaksosta vuodelta 1473 (kuva taideteoksesta Wikipedia, hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Leonardo_da_Vinci, original picture http://www.drawingsofleonardo.org
+10. Katettu vaunu (Valokuva, Pixabay  hakupäivä 11.5.2022) https://pixabay.com/fi/photos/katettu-vaunu-yhdysvallat-amerikka-2967229/
