Added places images and styles

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,16 @@ Käytetyt kuvat ja lähdeosoitteet:(käytetty pelkästään public domain -kuvia
 5. Amelia Earhart (Valokuva 1937, National Portrait Gallery, Smithsonian Institution; gift of George R. Rinhart, in memory of Joan Rinhart. Hakupäivä 10.5.2022, Wikipedia) 
 https://en.wikipedia.org/wiki/Amelia_Earhart original http://amextbg2.wgbhdigital.org/wgbh/americanexperience/media/uploads/special_features/photo_gallery/amelia_gallery_07.jpg
 6. Pyramidit (Valokuva, Pixabay  hakupäivä 11.5.2022)https://pixabay.com/fi/photos/pyramidit-egypti-egyptil%c3%a4inen-2371501/
+7. tuolla alempana
 
-7. Valtionhotelli, Imatra (Valokuva, Pixabay, hakupäivä 11.5.2022) https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/
 8. Madame de Pompadour (Taideteos, Francois Boucher 1756, Wikipedia hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Madame_de_Pompadour
 9. Leonardo da Vincin piirros Arnon laaksosta vuodelta 1473 (kuva taideteoksesta Wikipedia, hakupäivä 11.5.2022) https://fi.wikipedia.org/wiki/Leonardo_da_Vinci, original picture http://www.drawingsofleonardo.org
 10. Katettu vaunu (Valokuva, Pixabay  hakupäivä 11.5.2022) https://pixabay.com/fi/photos/katettu-vaunu-yhdysvallat-amerikka-2967229/
+
+11. Vaasi Pompeji(Valokuva, Pixabay  hakupäivä 11.5.2022) https://pixabay.com/fi/photos/maljakko-amfora-pompeji-italia-1538329/
+7. Valtionhotelli, Imatra (Valokuva, Pixabay, hakupäivä 11.5.2022) https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/
+12. Nijon linna (This is a picture of Ninomaru Palace in the Nijo Castle. The picture was taken by Tino Warinowski (User:Chino) and is hereby relased to the public domain. Source URL http://en.wikipedia.org/wiki/Image:NinomaruPalace.jpg
+https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna wikipediasta 
+13. Kukulcan (Valokuva, Pixabay  hakupäivä 11.5.2022)https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/
+
+
