tested fetch other changes

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ https://en.wikipedia.org/wiki/Amelia_Earhart original http://amextbg2.wgbhdigita
 https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna wikipediasta 
 13. Kukulcan (Valokuva, Pixabay  hakupäivä 11.5.2022)https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/
 
-Värimaailma uusi
+Värimaailma uusittu kokonaan (vrt. suunnitelma)
 
